# isol8

./: .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  docker-compose.localstack.yml  docker-compose.yml  init_db.py  main.py  main.tf  openclaw-version.json  openclaw-version.schema.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  seed_pricing.py  town-v2-tileset.tsx  town-v2.tmx  turbo.json  variables.tf  vercel.json  vite.config.ts
apps/backend/: .coveragerc  .dockerignore  .env.localstack  .gitignore  BUILD_TRIGGER  Dockerfile  deploy_dev_fast.sh  init_db.py  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
apps/backend/core/: apartment_constants.py  auth.py  config.py  database.py  dependencies.py  dynamodb.py  encryption.py  tenancy_codes.py
apps/backend/core/billing/: bedrock_pricing.py
apps/backend/core/containers/: __init__.py  config.py  device_identity.py  ecs_manager.py  workspace.py
apps/backend/core/crypto/: __init__.py  kms_secrets.py  operator_device.py
apps/backend/core/gateway/: connection_pool.py  node_connection.py
apps/backend/core/middleware/: admin_metrics.py
apps/backend/core/observability/: __init__.py  e2e_correlation.py  logging.py  metrics.py  middleware.py
apps/backend/core/repositories/: admin_actions_repo.py  api_key_repo.py  billing_repo.py  channel_link_repo.py  container_repo.py  paperclip_repo.py  update_repo.py  usage_repo.py  user_repo.py
apps/backend/core/services/: admin_audit.py  admin_redact.py  admin_service.py  agent_export.py  bedrock_pricing.py  (+50 more)
apps/backend/data/: gentle_map.json  town-map.tmj
apps/backend/migrations/: 001_add_containers_table.sql
apps/backend/models/: __init__.py  audit_log.py  user.py  user_api_key.py
apps/backend/routers/: admin.py  admin_catalog.py  billing.py  catalog.py  channels.py  config.py  container.py  container_recover.py  container_rpc.py  control_ui_proxy.py  debug.py  desktop_auth.py  integrations.py  marketplace_admin.py  marketplace_install.py  marketplace_listings.py  marketplace_payouts.py  marketplace_purchases.py  node_proxy.py  oauth.py  orgs.py  paperclip_api.py  paperclip_proxy.py  proxy.py  settings_keys.py  town.py  updates.py  users.py  webhooks.py  websocket_chat.py  workspace_files.py
apps/backend/schemas/: billing.py  marketplace.py  orgs.py  user_schemas.py
apps/backend/scripts/: backfill_gateway_token_encryption.py  bootstrap_paperclip_admin.py  migrate_provider_choice.py  reconcile_all_configs.py
apps/backend/tests/: conftest.py  test_main.py  test_observability_integration.py  test_paperclip_admin_client.py  test_paperclip_provisioning.py  test_paperclip_proxy.py  test_paperclip_repo.py  test_service_token.py  test_update_service.py  test_workspace_files.py
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
(+1493 files in other folders)
