[project]
name = "isol8-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<0.136.0",
    "starlette>=0.47.2",
    "uvicorn==0.27.1",
    "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
    "greenlet>=3.0.0",
    "asyncpg==0.29.0",
    "pydantic>=2.7.3,<3.0.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.7",
    "cryptography>=46.0.5,<47.0.0",
    "pynacl>=1.6.2",
    "argon2-cffi==23.1.0",
    "httpx>=0.28.0,<0.29.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "clerk-backend-api>=1.0.0",
    "PyJWT[crypto]>=2.11.0",
    "passlib[bcrypt]==1.7.4",
    "svix==1.21.0",
    "stripe>=8.0.0",
    "docker>=7.0.0",
    "websockets>=12.0",
    "Pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "factory-boy==3.3.0",
    "aiosqlite==0.19.0",
    "respx==0.20.2",
    "schemathesis>=3.28.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
