[project]
name = "isol8-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<0.136.0",
    "starlette>=0.47.2",
    "uvicorn==0.27.1",
    "pydantic[email]>=2.7.3,<3.0.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.7",
    "cryptography>=46.0.5,<47.0.0",
    "httpx>=0.28.0,<0.29.0",
    "boto3>=1.34.0",
    "PyJWT[crypto]>=2.11.0",
    "stripe>=8.0.0",
    "websockets>=12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "factory-boy==3.3.0",
    "respx==0.20.2",
    "schemathesis>=3.28.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "moto[dynamodb]>=5.1.22",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
